[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "replay-code"
version = "1.0.0"
description = "Analysis pipeline for detecting sequential neural replay patterns in infant EEG data"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Christopher Postzich", email = "christopher.postzich@uksh.de"}
]
maintainers = [
    {name = "SkeideLab"}
]
keywords = [
    "EEG",
    "neuroscience",
    "replay",
    "memory",
    "infant",
    "TDLM",
    "decoding",
    "MNE"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "mne>=1.5.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "numpydoc>=1.5.0",
]
jupyter = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "ipywidgets>=8.0.0",
]
all = [
    "replay-code[dev,docs,jupyter]",
]

[project.urls]
Homepage = "https://github.com/SkeideLab/REPLAY"
Repository = "https://github.com/SkeideLab/REPLAY"
Documentation = "https://github.com/SkeideLab/REPLAY#readme"
"Bug Tracker" = "https://github.com/SkeideLab/REPLAY/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["utils*"]

[tool.setuptools.package-data]
"additional_data" = ["*.xlsx", "*.npz"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | \.ipynb_checkpoints
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["utils"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=utils --cov-report=term-missing"
